--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,15 @@
   animation-duration: 5s;
   animation-iteration-count: infinite;
 }
+
+.favor {
+  border-radius: 50%;
+  width: 15px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+height: 15px;
+color: red;
+position: absolute;
+}
